--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ window {
 
 window entry{
 	font-size: 50px;
+	padding: 15px;
+	border-radius: 36px;
 }
 
 .reply_label{
@@ -24,6 +26,15 @@ window entry{
 
 }
 
+.terminal_scrolledwindow{
+	background: #181818;
+	opacity: 0.9;
+	border-radius: 36px;
+	padding: 15px;
+	margin-top: 36px;
+}
+
 .terminal_textview{
+	background: transparent;
 	font-size: 24px;
 }
